// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyResults should EmptyResults with message renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="height: 100%; width: 100%; display: flex; justify-content: center; align-items: center;"
      >
        <div
          class="ms-Stack css-40"
        >
          <div
            class="ms-StackItem css-41"
          >
            <div
              aria-label="Empty Search Icon"
              class="sc-iBPRYJ fBnPKg"
              title="Empty Search Icon"
            />
          </div>
          <div
            class="ms-StackItem css-42"
          >
            <p
              class="sc-pFZIQ heQLDe"
            >
               
              testmessage
               
            </p>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="height: 100%; width: 100%; display: flex; justify-content: center; align-items: center;"
    >
      <div
        class="ms-Stack css-40"
      >
        <div
          class="ms-StackItem css-41"
        >
          <div
            aria-label="Empty Search Icon"
            class="sc-iBPRYJ fBnPKg"
            title="Empty Search Icon"
          />
        </div>
        <div
          class="ms-StackItem css-42"
        >
          <p
            class="sc-pFZIQ heQLDe"
          >
             
            testmessage
             
          </p>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`EmptyResults should EmptyResults without message renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="height: 100%; width: 100%; display: flex; justify-content: center; align-items: center;"
      >
        <div
          class="ms-Stack css-40"
        >
          <div
            class="ms-StackItem css-41"
          >
            <div
              aria-label="Empty Search Icon"
              class="sc-iBPRYJ fBnPKg"
              title="Empty Search Icon"
            />
          </div>
          <div
            class="ms-StackItem css-42"
          >
            <p
              class="sc-pFZIQ heQLDe"
            >
               
              No Results Found
               
            </p>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="height: 100%; width: 100%; display: flex; justify-content: center; align-items: center;"
    >
      <div
        class="ms-Stack css-40"
      >
        <div
          class="ms-StackItem css-41"
        >
          <div
            aria-label="Empty Search Icon"
            class="sc-iBPRYJ fBnPKg"
            title="Empty Search Icon"
          />
        </div>
        <div
          class="ms-StackItem css-42"
        >
          <p
            class="sc-pFZIQ heQLDe"
          >
             
            No Results Found
             
          </p>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
